Clean up, use alternate functions for checking emptiness, remove usage of deprecations. Update logging to remove warnings. Small clean-ups following inspections/analysis outputs.